chore(table): fix hAlign on TableCell after cssUtils refactor

--- a/packages/core/src/_core.scss
+++ b/packages/core/src/_core.scss
@@ -267,7 +267,11 @@ $_layer-order: (
 
   @each $alignment in typography.$text-alignments {
     .rmd-align-#{$alignment} {
-      text-align: $alignment;
+      @if $alignment != center {
+        @include utils.auto-rtl(text-align, $alignment);
+      } @else {
+        text-align: $alignment;
+      }
     }
   }
 
